# MCP-Agent

./: .gitignore  README.md  pom.xml
assistant/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-models.yml  docker-compose.yml  pyproject.toml
assistant/ai/data/adv/: site_info.txt
assistant/ai/data/embeddings/: produits_embeddings.pkl  produits_faiss.index
assistant/ai/data/examples/classification/: classifier_examples.json
assistant/ai/data/examples/extraction/: entity_examples.json
assistant/ai/data/examples/questions/: product_queries.json
assistant/ai/data/raw/: products.csv  yalla-prod.categories-20-02-2025.csv
assistant/ai/llm/: deepseek_client.py  ollama_client.py
assistant/ai/preparation/: clean.py  embedding.py  indexing.py  pipeline.py
assistant/ai/prompts_template/: adv_platform_prompt.py  classifier_prompt.py  generale_prompt.py
assistant/ai/utils/: language_util.py  model_loader.py  model_manager.py  query_validator.py
assistant/app/: README.md  __main__.py  main.py
assistant/app/config/: logger.py  redis_settings.py  settings.py
assistant/app/enum/: QueryType.py
assistant/app/routes/: chatBot_routes.py  classifier_routes.py  redis_routes.py  search_routes.py  voice_routes.py
assistant/app/schemas/: classification.py  history.py  voice.py
assistant/app/services/: classifier_service.py  history_service.py  response_service.py  streaming_generator_service.py  voice_service.py
assistant/app/utils/: filters_validator.py  redis_manager.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  angular.json  (+4 more)
(+58 files in other folders)
